objects/DML_Relation_History__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Account Setup Requested,Customer, Prospect, Parent, GrandParent, Great Grandparent</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>DML Relation History</relationshipLabel>
        <relationshipName>DML_Relation_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CUSTOMERID__c</fullName>
        <externalId>true</externalId>
        <label>CUSTOMER ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_DML__c</fullName>
        <formula>DML_Relationship__r.DML__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current DML</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <formula>BLANKVALUE(Account__r.AOPS_Cust_Id__c, CUSTOMERID__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DML_ID__c</fullName>
        <formula>DML__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DML_ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DML_Relation_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DML Relation Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DML_Relation_HistoryUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DML_Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DML Relationship</label>
        <referenceTo>DML_Relation__c</referenceTo>
        <relationshipName>DML_Relation_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DML__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DML ID</label>
        <referenceTo>DML__c</referenceTo>
        <relationshipName>DML_Relation_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effective_End_Date__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Start_Date__c</fullName>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <label>Relation History</label>
    <nameField>
        <displayFormat>DH-{0000}</displayFormat>
        <label>DML Relation History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DML Relation History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>